--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "dat.gui": "^0.7.9",
     "vite": "^3.1.0"
   },
   "dependencies": {
